# peticao_inicial

./: .env  main.py  pyproject.toml
src/chains/: chains.md  dos_fatos_chain.py
src/chains/dos_fatos/: prompt_data_cleaning.md  prompt_data_cleaning.py
src/core/: core.md  llm_factory.py
src/models/: dos_fatos_model.py  models.md
src/services/: services.md
tests/core/: test_llm_factory.py
